<resources>
    <string name="app_name">pjsipDemo</string>

    <string name="call">Call</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="domain">Domain</string>
    <string name="submit">Submit</string>
    <string name="setting">setting</string>
    <string name="user">user</string>
    <string name="exit">exit</string>
    <string name="contact">联系人</string>
    <string name="phone">电话</string>
    <string name="message">信息</string>
    <string name="record">对讲</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_contact">Add</string>
    <string name="J">#</string>
    <string name="_0">0</string>
    <string name="X">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="call_from_who">Call from who</string>
    <string name="hang_up">挂断</string>
    <string name="time">time</string>
    <string name="louder">免提</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_state">Contact State</string>
    <string name="send">发送</string>
    <string name="contact_info">Contact Info</string>
    <string name="push_to_talk">Push To Talk</string>
    <string name="conferences_number">Conferences Number</string>
    <string name="talk">TALK</string>
</resources>