<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CallingAudioFragment" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/hang_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/hang_up"
        app:layout_constraintEnd_toEndOf="@+id/time_text"
        app:layout_constraintStart_toStartOf="@+id/time_text"
        app:layout_constraintTop_toBottomOf="@+id/time_text" />

    <Button
        android:id="@+id/louder_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/louder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/hang_up_btn"
        app:layout_constraintStart_toStartOf="@+id/hang_up_btn"
        app:layout_constraintTop_toBottomOf="@+id/hang_up_btn" />

    <TextView
        android:id="@+id/contact_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/contact"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/time"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/contact_name_text"
        app:layout_constraintStart_toStartOf="@+id/contact_name_text"
        app:layout_constraintTop_toBottomOf="@+id/contact_name_text" />
</androidx.constraintlayout.widget.ConstraintLayout>