<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolBar"
        style="@style/ThemeOverlay.MaterialComponents.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentTop="true"
        app:title="MySipPhone" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/DrawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mToolBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/rg_tab_bar" />

            <RadioGroup
                android:id="@+id/rg_tab_bar"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_contact"
                    style="@style/tab_menu_item"
                    android:drawableTop="@color/selector_contact"
                    android:text="@string/contact" />

                <RadioButton
                    android:id="@+id/rb_phone"
                    style="@style/tab_menu_item"
                    android:drawableTop="@color/selector_phone"
                    android:text="@string/phone" />

                <RadioButton
                    android:id="@+id/rb_message"
                    style="@style/tab_menu_item"
                    android:drawableTop="@color/selector_message"
                    android:text="@string/message" />

                <RadioButton
                    android:id="@+id/rb_record"
                    style="@style/tab_menu_item"
                    android:drawableTop="@color/selector_record"
                    android:text="@string/record"/>
            </RadioGroup>
        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/drawer_header"
            app:menu="@menu/drawer_menu" />
    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>

