<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CallingAudioFragment" >

    <SurfaceView
        android:id="@+id/video_window"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SurfaceView
        android:id="@+id/video_preview"
        android:layout_width="72dp"
        android:layout_height="128dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hang_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:alpha="0.4"
        android:text="@string/hang_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/time_text"
        app:layout_constraintStart_toStartOf="@+id/time_text"
        app:layout_constraintTop_toBottomOf="@+id/time_text" />

    <Button
        android:id="@+id/louder_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        android:text="@string/louder"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/hang_up_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hang_up_btn"
        app:layout_constraintTop_toBottomOf="@+id/hang_up_btn" />

    <TextView
        android:id="@+id/contact_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/contact"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:hint="@string/time"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/contact_name_text"
        app:layout_constraintStart_toStartOf="@+id/contact_name_text"
        app:layout_constraintTop_toBottomOf="@+id/contact_name_text" />

</androidx.constraintlayout.widget.ConstraintLayout>